--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,13 @@
-body{
-	background: black;
-	margin: 0;
-	font-family:'Courier New', Courier, monospace
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wgth@300;400;500;700&display=swap");
+
+*{
+	padding: 0px;
+	box-sizing: border-box;
+	font-family: "Ubuntu", sans-serif;
 }
 
-header{
-	background: white;
-	padding: 10px;
-}
-header h1{
-	margin: 0;
+body{
+	background: black;	
 }
 
 div.post{
@@ -17,51 +15,37 @@ div.post{
 	margin-top: 10px;
 }
 
-div.post img{
-	width: 100%;
+div.post p{
+	margin-top: 10px;
 }
 
-div.post .post-header p{
-	font-size: xx-small;
-}
-
-div.post .post-header div:nth-child(1n){
-	display: inline-block;
-	width: 33%;
-}
-
-div.post .post-header div:nth-child(2n){
-	display: inline-block;
-	width: 33%;
-}
-
-div.post .post-header div:last-child{
-	display: inline-block;
-	text-align: right;
-}
-
-div.post .post-footer svg:nth-child(1n){
-	display: inline-block;
-}
-
-div.post .post-footer svg:nth-child(2n){
-	display: inline-block;
-}
-
-div.post .post-footer svg:nth-child(3n){
-	display: inline-block;
-}
-
-div.post .post-footer svg:last-child{
-	display: inline-block;
-	width: 80%;
-	align-items:flex-end;
-}
-div.post h2, div.post p{
-	padding: 10px;
-	margin: 0;
-}
 div.container{
 	margin: auto;
 	width: 400px;
+}
+
+div.post-header{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+.post-header .user {
+	display: flex;
+	align-items: center;
+}
+
+.post-header .user svg {
+	margin-right: 20px;
+	transform: scale(2);
+}
+
+div.post .post-header p{
+	font-size: small;
+}
+
+div.post img{
+	width: 100%;
 }
